# RPC-Broker

./: .gitignore  Broker.vcxproj  Broker.vcxproj.filters  Makefile.am  README.md  broker.c  broker.sln  broker_support.c  broker_support.h  client-proxy.c  client.c  common.c  common.h  configure.ac  listen.c  make  make_all_lin  make_broker  make_broker_lin  make_client  make_client_lin  make_server_lin  make_server_win  protocol.h  server-proxy.c  server.c  server_interface.h  use_buffer_unpack.c  usestulibc.c
broker/: Makefile.am  UnpackServiceRegistrationBuffer.c  broker.c  broker.h  broker.ini  broker_support.c  broker_support.h  config.ini  find_client.c  find_client_for_response.c  find_server.c  find_server_for_request.c  forward_request.c  forward_request_to_server.c  forward_response.c  forward_response_to_client.c  get_sender_address.c  register_client_request.c  register_service.c  unpack_service_registration_buffer.c
client/: Makefile.am  client-proxy.c  client.c  config.ini  generate_proxy.pl  pack_client_request_data.c  send_and_receive.c  server_interface.h  stress.sh
common/: common.c  common.h  protocol.h
doc/: ip_address.c  protocol.h  use_buffer_unpack.c
server/: Makefile.am  config.ini  generate_proxy.pl  ini.flex  pack_client_response_data.c  proxy.gen.c  server-proxy.c  server.c  server.h  server_interface.c  server_interface.h  service_register_with_broker.c  unpack_marshal_call.c
